--- a/projects/1-newbie/skilled-landing-page/scss/_index.scss
+++ b/projects/1-newbie/skilled-landing-page/scss/_index.scss
@@ -14,11 +14,16 @@ body {
 
 // CSS: Global
 .container {
-  width: 90%;
+  width: 100%;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+}
+@media (min-width: 575px) {
+  .container {
+    max-width: 90%;
+  }
 }
 @media (min-width: 992px) {
   .container {
